Ajout des detstructions de variables dans un éditeur

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -144,31 +144,15 @@
                     <!--Rajouter une fonction javascript pour afficher toutes les variables -->
                   </div>
                 </div>
-              </div>
+              </div> 
             </div>
 
           <!-- ONGLET PREPARATION -->
           <div class="RCl_Contenu_Onglet_Cache" id="RId_Contenu_Onglet_Preparation">
-            <div class="row">
-                <div class="large-3 card">
-                  <div class="card-divider">
-                    Ensemble d'instructions
-                  </div>
-                  <div class="card-section">
-                  </div>
-                </div>
-                <div class="large-5 column">
-                  <div class="primary callout">
-                  Operateurs/instructions/ A Changer
-                </div>
-                </div>
-                <!--<div class="large-3 card">
-                  <div class="card-divider">
-                    Variables
-                  </div>
-                  <div class="card-section"> du texte
-                  </div>
-                </div>-->
+            <div class="row" style="margin:15px;">
+              <div class="large-3 columns"><div class="callout"> ducaca</div> </div>
+              <div class="large-6 columns"> <div class="callout">encore plus de caca </div></div>
+              <div class="large-3 columns"> <div class="callout">un peu plus de caca ? </div></div>
             </div>
           </div>
 
