Ajout des dernières modifs, encore à bosser sur la transformation du delta

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -72,9 +72,9 @@
                 </label>
               </div>
             </div>
-            <div class="row" style="margin:15px;padding:15px;">
+            <div class="row" style="margin:15px">
               <label>Code Libre :
-                <textarea placeholder="Votre code" id="free_Code_EnTete"></textarea>
+                <div class="row" id="editor-EnTete" style="margin:15px;"></div>
               </label>
             </div>
           </div>
