--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -37,7 +37,7 @@
         <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Entete" onclick="change_onglet('Entete');">Entête</span>
         <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Enonce" onclick="change_onglet('Enonce');">Enoncé</span>
         <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Preparation" onclick="change_onglet('Preparation');">Préparation</span>
-        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Analyse" onclick="change_onglet('Analyse'); update_variables_answers_view('card_Analyse_Variable',variable_List,check_answer_tab(answer_List));">Analyse</span>
+        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Analyse" onclick="change_onglet('Analyse');">Analyse</span>
         <span class="RCl_Onglet_Fake RCl_Onglet"></span>
         <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Code" onclick="change_onglet('Code'); update_final_code();">Code</span>
         <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Sauvegarde" onclick="change_onglet('Sauvegarde');">Sauvegarde</span>
@@ -259,7 +259,7 @@
   <script src="src/Variable.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/Answer.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/AnswerBlock.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/SEditeur.js" type="text/javascript" charset="utf-8"></script>
+  <script src="src/SEditor.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyFieldWIMSEditor.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyCustom.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/SProgramEditor.js" type="text/javascript" charset="utf-8"></script>
