--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -154,7 +154,7 @@
               <div class="large-9 columns">
                 <div id="RId_programPrep" style="position: relative; height:400px"></div>
               </div>
-              <div class="large-3 columns"> <div class="callout">un peu plus de texte ? </div></div>
+              <div class="large-3 columns"> <div class="callout" id="card_Prep_Variable">un peu plus de texte ? </div></div>
             </div>
           </div>
 
