Ajout et delete des variables dan blockly

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -247,6 +247,8 @@
     <category name="Essaims"></category>
   </xml>
 
+  <button name="TESTOUILLE" onclick="add_blockly_variable()" value="TEST">Hello</button>
+
   <script src="js_tools/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
   <script src="js_tools/vendor/what-input.js" type="text/javascript" charset="utf-8"></script>
   <script src="js_tools/vendor/foundation.js" type="text/javascript" charset="utf-8"></script>
