--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -268,6 +268,8 @@
   <script src="src/AnswerBlock.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/SEditor.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyFieldWIMSEditor.js" type="text/javascript" charset="utf-8"></script>
+  <script src="src/BlocklyOEFgenerator.js" type="text/javascript" charset="utf-8"></script>
+  <script src="src/BlocklyWIMSBlocks.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyCustom.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/SProgramEditor.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/app.js" type="text/javascript" charset="utf-8"></script>
