ajout d'un popup dans blockly

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -259,7 +259,7 @@
     <category name="Essaims"></category>
   </xml>
 
-  <!-- <button name="TESTOUILLE" onclick="test()" value="TEST">Hello</button> -->
+  <button name="TESTOUILLE" onclick="generate_popup_list_var(536,250)" value="TEST">Hello</button>
 
   <script src="js_tools/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
   <script src="js_tools/vendor/what-input.js" type="text/javascript" charset="utf-8"></script>
