--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -179,6 +179,7 @@
                 </div>
               </div>
             </div>
+            <div id="RId_programAnalyse" style="position: relative; height:400px"></div>
           </div>
 
           <!-- ONGLET CODE -->
@@ -284,6 +285,94 @@
     <sep></sep>
     <category name="Essaims"></category>
   </xml>
+
+
+<!-- MON TEST -->
+<div id="RId_programAnalyse_blockly" style="position: absolute"></div>
+<xml id="RId_toolbox_programAnalyse" xmlns="http://www.w3.org/1999/xhtml" style="display: none;">
+  <category name="WIMS">
+    <block type="wims_while">
+      <field name="WIMS_EDITOR">true</field>
+    </block>
+    <block type="wims_editor">
+      <field name="WIMS_EDITOR">true</field>
+    </block>
+    <block type="wims_up_down_editor">
+      <field name="WIMS_EDITOR">true</field>
+    </block>
+    <block type="wims_variable_editor">
+      <field name = "VARIABLE_CHOICE"></field>
+      <field name="WIMS_EDITOR"></field>
+    </block>
+    <block type="wims_if">
+    </block>
+    <block type ="wims_comment">
+      <field name="COMMENT">Mettre ici le commentaire</field>
+    </block>
+    <block type="wims_for">
+      <value name="START">
+        <shadow type="math_number">
+          <field name="NUM">0</field>
+        </shadow>
+      </value>
+      <value name="END">
+        <shadow type="math_number">
+          <field name="NUM">10</field>
+        </shadow>
+      </value>
+      <value name="STEP">
+        <shadow type="math_number">
+          <field name="NUM">1</field>
+        </shadow>
+      </value>
+    </block>
+    <block type="wims_change_type">
+      <field name="VARIABLE_CHOICE"></field>
+      <field name="TYPE"></field>
+    </block>
+    <block type="wims_define_variable">
+      <field name="VARIABLE_CHOICE"></field>
+      <field name="TYPE"></field>
+      <field name="WIMS_EDITOR">value</field>
+    </block>
+    <block type="text">
+      <field name="TEXT"></field>
+    </block>
+  </category>
+  <category name="Variables" colour="#a55b6d" custom="VARIABLE"></category>
+  <category name="Contrôle">
+    <block type="controls_for">
+      <field name="VAR">i</field>
+      <value name="FROM">
+        <shadow type="math_number">
+          <field name="NUM">1</field>
+        </shadow>
+      </value>
+      <value name="TO">
+        <shadow type="math_number">
+          <field name="NUM">10</field>
+        </shadow>
+      </value>
+      <value name="BY">
+        <shadow type="math_number">
+          <field name="NUM">1</field>
+        </shadow>
+      </value>
+    </block>
+    <block type="controls_repeat_ext">
+      <value name="TIMES">
+        <shadow type="math_number">
+          <field name="NUM">10</field>
+        </shadow>
+      </value>
+    </block>
+    <block type="controls_if"></block>
+  </category>
+  <sep></sep>
+  <category name="Essaims"></category>
+</xml>
+<!-- FIN DU TEST -->
+
 
   <button name="TESTOUILLE" onclick="console.log(variable_List)" value="TEST">Hello</button>
 
