Generation du code des blockly analyse

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-<object style="position: fixed; width: 0; height: 0;" data="test.jpeg" type="image/jpeg"></object>
+<!-- <object style="position: fixed; width: 0; height: 0;" data="test.jpeg" type="image/jpeg"></object> -->
   <div class="popup_hidden" id="popup"></div> <!-- va servir pour tous les popups -->
 
   <div class="row">
@@ -393,6 +393,7 @@
   <script src="src/BlocklyWIMS/OEF/variablesOEFGenerator.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyWIMS/OEF/math.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyWIMS/OEF/logic.js" type="text/javascript" charset="utf-8"></script>
+  <script src="src/BlocklyWIMS/OEF/analyse.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyWIMS/OEF/BlocklyWIMSBlocks.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyWIMS/BlocklyCustom.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyWIMS/SProgramEditor.js" type="text/javascript" charset="utf-8"></script>
