--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -215,7 +215,7 @@
         <field name="TYPE"></field>
       </block>
       <block type ="wims_comment">
-        <field name="COMMENT">Commentaire</field>
+        <field name="COMMENT">Comment</field>
       </block>
       <block type="wims_variable_editor">
         <field name = "VARIABLE_CHOICE"></field>
@@ -304,7 +304,7 @@
     <block type="wims_if">
     </block>
     <block type ="wims_comment">
-      <field name="COMMENT">Commentaire</field>
+      <field name="COMMENT">Comment</field>
     </block>
     <block type="wims_for">
       <value name="START">
@@ -379,10 +379,11 @@
   <script src="js_tools/vendor/foundation.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="js_tools/katex/katex.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
-  <script src="js_tools/blockly/blockly_uncompressed.js"></script>
-  <script src="js_tools/html2canvas.js"></script>
-  <script src="js_tools/blockly/blocks_compressed.js"></script>
-  <script src="js_tools/blockly/msg/js/en.js"></script>
+  <script type="text/javascript" src="js_tools/blockly/blockly_uncompressed.js"></script>
+  <script type="text/javascript" src="js_tools/html2canvas.js"></script>
+  <script type="text/javascript" src="js_tools/blockly/blocks_compressed.js"></script>
+  <script type="text/javascript" src="js_tools/blockly/msg/js/fr.js"></script>
+  <script type="text/javascript" src="src/BlocklyWIMS/msg/js/fr.js"></script>
   <script type="text/javascript" src="js_tools/quill/quill.min.js"></script>
   <script src="src/ImageVariable.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/LatexImage.js" type="text/javascript" charset="utf-8"></script>
